@@ -1,4 +1,12 @@
--convert database
+-Ctrl/P shortcut for preview card in Add Cards dialog
+-Yet to learn: also ctrl 0, 1, control Y
+-add cards: exit shortcut does not work
+
+-delete card action: both delete and backspace should work
+
+-convert own databases, also on windows
+
+-rescale window only when answer picture is shown
 
 -merge card appearance with settings
 
@@ -7,6 +15,8 @@
 -Hendrik image display problems
 
 -pgdwn in preview/edit in card browser
+
+-'importing history' text does not show?
 
 -all grades function as show answer
 -have page up/up/page down/down keys work to scroll in q and a widgets
@@ -22,7 +32,11 @@
 -tip on double-click to tag names and cards to edit them
 -right click on tag names in browser
 
+-right click on criterion names (also tip)
+
 -About dialog, with version and link to source
+
+
 
 
 -layout of "add clone" is not optimal under Windows
@@ -43,6 +57,8 @@ http://stackoverflow.com/questions/2545577/qsplitter-becoming-undistinguishable-
  restarting brings bw cards.
 
 -configure dialog is slow on Windows due to server detect
+
+-remove upgrade_beta_6.py
 
 -also give warning on the client side if a sync failed and a backup needs to happen
 -server down should not result in sync conflict
